<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    >


    <TextView
        android:id="@+id/textHint"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:text="@string/contact_description"
        android:textAlignment="center"
        android:textColor="@color/dotActivated"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textHint"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/edit_text_login_bg"
        android:hint="@string/name_contact_hint"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/contact_phone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/contact_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/edit_text_login_bg"
        android:hint="@string/phone_contact_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/relation_contact"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_below="@+id/contact_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="352dp"
        android:background="@drawable/edit_text_login_bg"
        android:textAlignment="center"
        android:textColor="#070707"></Spinner>

    <Button
        android:id="@+id/ResetContact"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="225dp"
        android:layout_marginLeft="225dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/button_login_bg"
        android:backgroundTint="@color/redColor"
        android:text="@string/reset" />

    <Button
        android:id="@+id/addContact"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="203dp"
        android:layout_marginRight="203dp"
        android:layout_marginBottom="141dp"
        android:background="@drawable/button_login_bg"
        android:text="@string/addContact" />

    <Button
        android:id="@+id/existing_contacts_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="259dp"
android:visibility="invisible"
        android:background="@drawable/button_login_bg"
        android:drawableLeft="@drawable/icon_contacts"
        android:text="@string/existing_contact" />

    <Button
        android:id="@+id/manage_contacts"
        android:layout_width="552dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dotDisactivated"
        android:text="@string/manage_contact"
        android:textColor="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="111dp"
        android:layout_height="97dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="608dp"
        android:background="@drawable/contact"
        tools:src="@tools:sample/avatars" />

    <!--        android:background="@drawable/button_login_bg"-->




</RelativeLayout>

